tests/baselines/reference/nonContextuallyTypedLogicalOr.errors.txt
==== tests/cases/compiler/nonContextuallyTypedLogicalOr.ts (1 errors) ====
    interface Contextual {
        dummy;
        p?: number;
    }
    
    interface Ellement {
        dummy;
        p: any;
    }
    
    var c: Contextual;
    var e: Ellement;
    
    // This should error. Even though we are contextually typing e with Contextual, the RHS still
    // needs to be a supertype of the LHS to win as the best common type.
    (c || e).dummy;
             ~~~~~
!!! nonContextuallyTypedLogicalOr.ts(16,10): error TS2094: The property 'dummy' does not exist on value of type '{}'.